# MiniLang-Compiler

./: CMakeLists.txt  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
test/: out.s  test1  test1.my
